Ajuste de routes

--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -34,7 +34,7 @@
         </div>
 
         <button class="btn-adicionar">
-            <a href="cadastrar-doacao.html">Adicionar uma doação</a>
+            <a href="/cadastrar-doacao">Adicionar uma doação</a>
         </button>
 
     </body>
