--- a/views/extras/barra-navegacao.html
+++ b/views/extras/barra-navegacao.html
@@ -4,9 +4,9 @@
     </div>
     <i class='bx  bx-menu-search' id="icone-menu"></i> <!-- Ícone de menu -->
     <ul class="paginas-nav">
-        <li><a href="../routes/index.html">Início</a></li>
-        <li><a href="../routes/doacoes.html">Doações</a></li>
-        <li><a href="../routes/sobre.html">Sobre</a></li>
-        <li><a href="../routes/cadastro.html">Cadastre-se</a></li>
+        <li><a href="/">Início</a></li>
+        <li><a href="/doacoes">Doações</a></li>
+        <li><a href="/sobre">Sobre</a></li>
+        <li><a href="/cadastro">Cadastre-se</a></li>
     </ul>
 </nav>
