--- a/views/routes/sobre.html
+++ b/views/routes/sobre.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt_BR">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Sobre</title>
     <link rel="stylesheet" href="../styles/styles.css">
     <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/barra-nav-script.js"></script>
 </head>
 <body>
     <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
