--- a/views/routes/usuarios.ejs
+++ b/views/routes/usuarios.ejs
@@ -14,8 +14,9 @@
         <h1>Usuarios</h1>
         <ul>
             <% users.forEach(user => { %>
-                <li><strong>User: <%= user.name %></strong>></li>
+                <li><strong>User: <%= user.name %> </strong></li>
                 <li>Email: <%= user.email %></li>
+                <br>
             <%
             }); %>
         </ul>
