--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -37,6 +37,8 @@
             <a href="/cadastrar-doacao">Adicionar uma doação</a>
         </button>
 
+        <div id="ong">Tela pra ONG</div>
+
     </body>
     
 </html>
