Teste da página de doações para ONGs

--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -11,10 +11,8 @@
     </head>
     <body>
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
-        <script src="../scripts/doacoes-script.js"></script>
 
-        <div class="catalogo">
-
+        <div class="catalogo" id="catalogo">
             <ul class="lista-itens">
                 <li class="item">
                     <div class="imagem-doacao">
@@ -30,15 +28,14 @@
                     </div>
                 </li>
             </ul>
-
         </div>
 
-        <button class="btn-adicionar">
+        <button class="btn-adicionar" id="btn-adicionar">
             <a href="/cadastrar-doacao">Adicionar uma doação</a>
         </button>
 
-        <div id="ong">Tela pra ONG</div>
+        <div id="ong">Tela pra ONG</div> 
 
-    </body>
-    
+        <script src="../scripts/doacoes-script.js"></script>
+    </body>   
 </html>
