--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -72,7 +72,7 @@
                 <div class="step">
                     <h3 class="step-number">3</h3>
                     <h3>Contato Direto</h3>
-                    <p>Doador e receptor entram em acordo sobre coleta ou entrega, como na OLX, mas para o bem.</p>
+                    <p>Doador e receptor entram em acordo sobre coleta ou entrega com facilidade e eficiência.</p>
                 </div>
             </div>
         </section>
