--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -451,10 +451,10 @@ nav{
     width: 450px;
     height: 500px;
     margin-top: 45px;
-    border: 5px solid rgba(255, 255, 255, 0.2);
+    border: 4px solid rgba(255, 255, 255, 0.3);
     border-radius: 30px;
     overflow: hidden;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: rgba(255, 255, 255, 0.6);
     -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
     
@@ -466,30 +466,22 @@ nav{
     overflow: hidden;
 }
 
-.botoes-form {
+.logo-form {
     display: flex;
     justify-content: center;
-    gap: 10px;
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
-.botao {
-    font-weight: 500;
-    padding: 8px 30px;
-    border: none;
-    border-radius: 30px;
-    background-color: rgba(255, 255, 255, 0.3);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-    cursor: pointer;
-    transition: .2s;
+.logo-form img {
+    width: 3.5rem;
 }
 
-.trocar-cadastrar{
-    background-color: #6aa3dd;
-}
-
-.botao:hover {
-    opacity:  0.85;
+.titulo-form {
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    font-family: "unkempt", sans-serif;
 }
 
 .caixa-form {
@@ -509,7 +501,6 @@ nav{
 
 .caixa-entrar {
     left: -50%;
-    margin-top: 30px;
 }
 
 .inputs-form {
@@ -524,14 +515,29 @@ nav{
     width: 100%;
     height: 55px;
     margin: 10px 0;
-    border: none;
+    border: solid 2px rgba(0, 0, 0, 0.05);
     border-radius: 50px;
+    transition: .3s;
+}
+
+.inputs:focus {
+    border: solid 2px rgba(143, 195, 248, 0.7);
+
 }
 
 .campo-input {
     font-size: 16px;
     padding: 0 40px 0 20px;
     outline: none;
+}
+
+.campo-input::placeholder {
+  color: #818181;
+  transition: color 0.3s ease;
+}
+
+.campo-input:focus::placeholder {
+    color: rgba(117, 164, 211, 0.7);
 }
 
 .caixa-input .bx{
@@ -543,42 +549,32 @@ nav{
     height: 17px;
 }
 
-.titulo-form {
-    margin: 30px 0;
-    font-size: 28px;
-    font-weight: 600;
-}
-
-.esquecer-senha {
-    display: flex;
-    justify-content: right;
-    gap: 5px;
-}
-
-.esquecer-senha a {
-    color: black;
-    font-size: 14px;
-}
-
-.esquecer-senha a:hover {
-    text-decoration: underline;
-}
-
 .botao-entrar {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    font-weight: 600;
     color: white;
-    background-color: #6aa3dd;
+    background-color: #7fb3e8;
+    border: solid 2px #5d95ce;
     cursor: pointer;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
     transition: .3s;
+    transition: .3s ease;
 }
 
 .botao-entrar:hover {
-    gap: 15px;
+    background: #83ca9e;
+    border: solid 2px #68ac82;
+    transform: translateY(-2px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
+
+.transicao-form{
+    display: flex;
+    gap: 3px;
+}
+
+
 
 /* Estilos responsivos para mobile */
 @media (max-width: 768px){
