--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -9,7 +9,54 @@
         <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
         <script src="../scripts/barra-nav-script.js"></script>
     </head>
-    <body>
+    <body class="body-cadastro">
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
+        <div class="container-form-cad">
+
+            <div class="coluna-form">
+
+                <form action="/donate" method="post" class="caixa-form caixa-cadastrar form-doacao">
+                    <span class="titulo-form">Cadastrar Produto</span>
+
+                    <div class="inputs-form">
+                        <div class="caixa-input">
+                            <input type="text" name="itemType" class="inputs campo-input" placeholder="Nome do produto" required>
+                            <i class='bx bx-box'></i>
+                        </div>
+
+                        <div class="caixa-input">
+                            <textarea name="description" class="inputs campo-input" placeholder="Breve descrição do produto" rows="4" required style="resize:vertical; padding:12px 20px;"></textarea>
+                        </div>
+
+                        <div class="caixa-input">
+                            <select name="condition" class="inputs campo-input" required>
+                                <option value="" disabled selected>Condição do produto</option>
+                                <option value="novo-excelente">Novo - Excelente</option>
+                                <option value="novo-usado">Novo - Usado</option>
+                                <option value="usado-bom">Usado - Bom</option>
+                                <option value="usado-marcas">Usado - Com marcas de uso</option>
+                            </select>
+                        </div>
+
+                        <div class="caixa-input">
+                            <input type="file" name="image" accept="image/*" class="inputs" />
+                        </div>
+
+                        <div class="caixa-input">
+                            <input type="text" name="donator" class="inputs campo-input" placeholder="Nome do doador" required>
+                            <i class='bx bx-user'></i>
+                        </div>
+
+                        <div class="caixa-input">
+                            <button type="submit" class="inputs botao-entrar">
+                                <span>Cadastrar produto</span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+        
     </body>
 </html>
