Edições no cadastro

--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -12,7 +12,7 @@
     <body class="body-cadastro">
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
         
-        <div class="container-form-cad">
+        <div class="container-form-cadastro">
             <div class="coluna-form">
 
                 <div class="logo-form">
@@ -39,9 +39,8 @@
                             <i class='bx  bx-lock'></i> 
                         </div>
                         <button type="submit" class="inputs botao-entrar">Cadastrar</button>
-                        <div class="transicao-form" id="ir-login">
-                            <p class="trocar-entrar">Já possui uma conta? <span>Entre agora!</span></p>
-                            <i class='bx  bx-door-open'></i>  
+                        <div class="transicao-form">
+                            <p class="trocar-entrar">Já possui uma conta? <span id="ir-login">Entre agora!</span></p>
                         </div>
                     </div>
                 </form>
@@ -62,9 +61,8 @@
                                 <span>Entrar</span>
                             </button>
                         </div>
-                        <div class="transicao-form" id="ir-cadastrar">
-                            <p class="trocar-entrar">Não possui uma conta? <span>Junte-se a nós agora!</span></p>
-                            <i class='bx  bx-door-open'></i> 
+                        <div class="transicao-form">
+                            <p class="trocar-entrar">Não possui uma conta? <span id="ir-cadastrar">Junte-se a nós agora!</span></p>
                         </div>
                     </div>
                 </form>
