--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -446,10 +446,10 @@ nav{
     min-height: 100vh;
 }
 
-.container-form-cad {
+.container-form-cadastro {
     display: flex;
     width: 450px;
-    height: 500px;
+    height: 550px;
     margin-top: 45px;
     border: 4px solid rgba(255, 255, 255, 0.3);
     border-radius: 30px;
@@ -470,17 +470,16 @@ nav{
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    margin-bottom: 10px;
 }
 
 .logo-form img {
-    width: 3.5rem;
+    width: 80px;
+    margin-bottom: -20px;
 }
 
 .titulo-form {
     font-size: 28px;
     font-weight: 600;
-    margin-bottom: 20px;
     font-family: "unkempt", sans-serif;
 }
 
@@ -503,11 +502,69 @@ nav{
     left: -50%;
 }
 
+.checkbox-ong input[type="checkbox"] {
+    cursor: pointer;
+   display: none;
+}
+
+.checkbox-ong label {
+    cursor: pointer;
+    display: flex;
+}
+
+.checkbox-ong label::before {
+    content: '';
+    width: 12px;
+    height: 12px;
+    border: 2px solid black;
+    border-radius: 50%;
+    margin-right: 4px;
+}
+
+.checkbox-ong input[type="checkbox"]:checked + label::before {
+    background-color: rgb(226, 61, 61);
+}
+
+.caixa-entrar .caixa-input {
+    margin-bottom: 15px;
+}
+
 .inputs-form {
     width: 100%;
 }
 
+.transicao-form {
+    margin-top: 15px;
+    font-size: 15px;
+}
+
+.transicao-form span {
+    font-weight: 600;
+    color: #2c6baa;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.transicao-form span:hover {
+    color: #348754;
+}
+
 /* Estilos apenas para o formulário de doação (não afetam o formulário de cadastro) */
+
+.container-form-cad {
+    display: flex;
+    width: 450px;
+    height: 500px;
+    margin-top: 45px;
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-radius: 30px;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.6);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    
+}
+
 .form-doacao .caixa-input {
     width: 86%;
     max-width: 380px;
@@ -634,8 +691,6 @@ nav{
     display: flex;
     gap: 3px;
 }
-
-
 
 /* Estilos responsivos para mobile */
 @media (max-width: 768px){
