--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -15,7 +15,7 @@
 
             <div class="coluna-form">
 
-                <form action="/donate" method="post" class="caixa-form caixa-cadastrar form-doacao">
+                <form action="/donate" method="post" class="caixa-form caixa-cadastrar form-doacao" enctype="multipart/form-data">
                     <span class="titulo-form">Cadastrar Produto</span>
 
                     <div class="inputs-form">
