Edições na página de doações_teste.ejs

--- a/views/routes/doacoes.html
+++ b/views/routes/doacoes.html
@@ -27,8 +27,74 @@
                         </span>
                     </div>
                 </li>
+                                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais</button>
+                        </span>
+                    </div>
+                </li>
+                                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais</button>
+                        </span>
+                    </div>
+                </li>
+                                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais</button>
+                        </span>
+                    </div>
+                </li>
+                                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais</button>
+                        </span>
+                    </div>
+                </li>
+                                <li class="item">
+                    <div class="imagem-doacao">
+                        <img src="../imgs/camisa_teste.jpg" alt="Doação Teste">
+                    </div>
+                    <div class="info-item">
+                        <h3 class="nome-item">Nome do Produto</h3>
+                        <p class="descricao-item">Breve descrição do produto doado, condições, etc...</p>
+                        <span class="linha-doador">
+                            <p class="nome-doador">Nome do doador</p>
+                            <button class="botao-saber">Saber Mais</button>
+                        </span>
+                    </div>
+                </li>
             </ul>
         </div>
+        
 
         <button class="btn-adicionar" id="btn-adicionar">
             <a href="/cadastrar-doacao">Adicionar uma doação</a>
