--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -52,7 +52,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: white; /* rgba(255, 255, 255, 0.7); */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(3px);
     backdrop-filter: blur(3px);
@@ -268,17 +268,43 @@ nav{
 
 /* CSS da página de doações */
 
+.banner {
+    margin-top: 5%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url(../imgs/banner_2.jpg);
+    background-size: cover;
+    background-position: center 48%;
+    width: 100%;
+    height: 450px;
+    display: flex;
+    align-items: center;
+    color: white;
+}
+
+.texto-banner {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    margin-left: 20px;
+}
+
+.ttl-doacoes {
+    text-align: center;
+    font-weight: 550;
+    margin: 40px 0 25px 0;
+}
+
 .catalogo {
     max-width: 1400px;
-    margin: 0 auto;
-    padding: 50px 5%;
+    margin: 15px auto 0; /* diminuir o 100 depois */
+    padding: 2rem;
+    border: 2px solid #e0e0e0;
+    border-radius: 15px;
 }
 
 .lista-itens {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2rem;
-    margin-top: 50px;
     padding: 0;
     list-style: none;
 }
