--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -284,7 +284,16 @@ nav{
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-left: 20px;
+    margin-left: 2rem;
+}
+
+.texto-banner h1 {
+    font-size: 4.5rem;
+}
+
+.texto-banner p {
+    font-size: 1.2rem;
+    font-weight: 600;
 }
 
 .ttl-doacoes {
@@ -294,7 +303,7 @@ nav{
 }
 
 .catalogo {
-    max-width: 1400px;
+    max-width: 95vw;
     margin: 15px auto 0; /* diminuir o 100 depois */
     padding: 2rem;
     border: 2px solid #e0e0e0;
@@ -315,6 +324,7 @@ nav{
     border: 2px solid #e0e0e0;
     height: auto;
     min-height: 420px;
+    max-width: 420px;
     overflow: hidden;
     transition: all 0.3s ease;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
@@ -360,15 +370,19 @@ nav{
     font-size: 1.3rem;
     font-weight: 700;
     color: #333;
-    margin-bottom: 12px;
+    margin-bottom: 8px;
     line-height: 1.3;
+}
+
+.info-item .condicao-item {
+    font-size: 0.95rem;
 }
 
 .info-item .descricao-item {
     font-size: 0.95rem;
     color: #666;
     line-height: 1.6;
-    margin-bottom: 15px;
+    margin: 7px 0 15px 0;
     flex-grow: 1;
 }
 
