--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -31,10 +31,11 @@
                         <div class="caixa-input">
                             <select name="condition" class="inputs campo-input" required>
                                 <option value="" disabled selected>Condição do produto</option>
-                                <option value="novo-excelente">Novo - Excelente</option>
-                                <option value="novo-usado">Novo - Usado</option>
-                                <option value="usado-bom">Usado - Bom</option>
-                                <option value="usado-marcas">Usado - Com marcas de uso</option>
+                                <option value="Novo">Novo</option>
+                                <option value="Usado">Usado</option>
+                                <option value="Desgastado">Desgastado</option>
+                                <option vaalue="Alimento">Alimento Não-Perecível</option>
+            
                             </select>
                         </div>
 
