--- a/views/routes/doacoes_teste.ejs
+++ b/views/routes/doacoes_teste.ejs
@@ -29,8 +29,8 @@
                     </div>
                     <div class="info-item">
                         <h3 class="nome-item"><%= donation.itemType %></h3>
-                        <p class="descricao-item"><%= donation.condition %></p>
-                        <p class="descricao-item"><%= donation.description %></p>
+                        <p class="descricao-item">Estado: <%= donation.condition %></p>
+                        <p class="descricao-item">" <%= donation.description %> "</p>
                         <span class="linha-doador">
                             <p class="nome-doador"><%= donation.donator %></p>
                             <button class="botao-saber">Saber Mais</button>
