--- a/views/routes/doacoes_teste.ejs
+++ b/views/routes/doacoes_teste.ejs
@@ -15,7 +15,7 @@
          <section class="banner">
             <div class="texto-banner">
                 <h1>Faça o bem agora</h1>
-                <p>Visualize e resgata as doações disponíveis abaixo, ou faça a sua!</p>
+                <p>Visualize e resgate as doações disponíveis abaixo, ou faça a sua!</p>
             </div>
         </section>
 
@@ -29,7 +29,7 @@
                     </div>
                     <div class="info-item">
                         <h3 class="nome-item"><%= donation.itemType %></h3>
-                        <p class="descricao-item">Estado: <%= donation.condition %></p>
+                        <p class="condicao-item">Estado: <%= donation.condition %></p>
                         <p class="descricao-item">" <%= donation.description %> "</p>
                         <span class="linha-doador">
                             <p class="nome-doador"><%= donation.donator %></p>
