--- a/views/routes/sobre.html
+++ b/views/routes/sobre.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="../imgs/logo_2.png"/>
     <title>ShareSpot | Sobre o Projeto</title>
 
     <!-- CSS principal -->
