--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -410,7 +410,8 @@ nav{
     font-size: 1rem;
 }
 
-.botao-saber {
+.botao-resgatar {
+    display: none;
     padding: 10px 24px;
     border-radius: 25px;
     font-size: 0.9rem;
@@ -423,21 +424,76 @@ nav{
     white-space: nowrap;
 }
 
-.botao-saber:hover {
+.botao-resgatar:hover {
     background-color: #6aa3dd;
     color: white;
     transform: translateY(-2px);
     box-shadow: 0 4px 12px rgba(106, 163, 221, 0.3);
 }
 
-.botao-saber:active {
+.botao-resgatar:active {
     transform: translateY(0);
 }
 
-#ong {
+/* Estilos da caixa de confirmação de resgate */
+.popup {
     display: none;
+    position: fixed;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
 }
 
+.popup-conteudo {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 300px;
+    width: 450px;
+    background: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;  
+    border-radius: 30px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+.popup-conteudo i {
+    font-size: 120px;
+    margin-top: -10px;
+}
+
+#popup-txt {
+    font-weight: 600;
+    font-size: 30px;
+    margin: 15px 0 20px 0;
+}
+
+.popup-btn button, #btn-fechar{
+    padding: 10px 24px;
+    border-radius: 25px;
+    font-size: 0.9rem;
+    font-weight: 600;
+    border: none;
+    background-color: #6aa3dd;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    white-space: nowrap;
+}
+
+.popup-btn button:hover, #btn-fechar:hover {
+    background-color: #6aa3dd;
+    color: white;
+    transform: translateY(-5px);
+    box-shadow: 0 4px 12px rgba(106, 163, 221, 0.3);
+}
 
 /* Responsividade */
 
@@ -458,7 +514,7 @@ nav{
         gap: 10px;
     }
 
-    .botao-saber {
+    .botao-resgatar {
         width: 100%;
     }
 }
