Padronização do CSS do botão de fechar

--- a/views/routes/doacoes_teste.ejs
+++ b/views/routes/doacoes_teste.ejs
@@ -54,7 +54,7 @@
                     <button id="btn-confirmar">Confirmar</button>
                     <button id="btn-cancelar">Cancelar</button>
                 </div>
-                <button id="btn-fechar" style="display: none;">Fechar</button>
+                <button id="btn-fechar">Fechar</button>
             </div>
         </div>
 
