Conserto em uma variável e padronização do fundo da página de sobre

--- a/views/routes/sobre.html
+++ b/views/routes/sobre.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <script src="/scripts/barra-nav-script.js" defer></script>
 </head>
-<body>
+<body class="body-sobre">
 
     <!-- Navbar -->
     <div id="link-navbar"></div>
