--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -34,7 +34,7 @@
                                 <option value="Novo">Novo</option>
                                 <option value="Usado">Usado</option>
                                 <option value="Desgastado">Desgastado</option>
-                                <option vaalue="Alimento">Alimento Não-Perecível</option>
+                                <option value="Alimento">Alimento Não-Perecível</option>
             
                             </select>
                         </div>
