--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -54,8 +54,6 @@ nav{
     align-items: center;
     background-color: white; /* rgba(255, 255, 255, 0.7); */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    -webkit-backdrop-filter: blur(3px);
-    backdrop-filter: blur(3px);
 }
 
 .logo img{
@@ -810,7 +808,8 @@ nav{
     overflow: hidden;
     max-height: 0;
     transition: max-height 0.4s ease;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(232, 232, 232, 0.6);
+    backdrop-filter: blur(4px);
 }
 
 .paginas-nav.aberto {
@@ -820,13 +819,13 @@ nav{
 .paginas-nav a {
     display: block;
     padding: 1rem;
-    color: white;
+    color: black;
     transition: ease 0.4s;
 }
 
 .paginas-nav a:hover {
-    color: white;
-    background: rgba(0, 0, 0, 0.3);
+    color: black;
+    background: rgba(0, 0, 0, 0.2);
 
 }
 
