--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -16,7 +16,7 @@
             <div class="coluna-form">
 
                 <form action="/donate" method="post" class="caixa-form caixa-cadastrar form-doacao" enctype="multipart/form-data">
-                    <span class="titulo-form">Cadastrar Produto</span>
+                    <span class="titulo-form">Cadastrar Doação</span>
 
                     <div class="inputs-form">
                         <div class="caixa-input">
