--- a/views/routes/cadastro.html
+++ b/views/routes/cadastro.html
@@ -71,5 +71,6 @@
         </div>
 
         <script src="../scripts/script.js"></script>
+        <footer>ShareSpot - Mostra Tech UNINASSAU 2025</footer>
     </body>
 </html>
