--- a/views/routes/index.html
+++ b/views/routes/index.html
@@ -83,6 +83,6 @@
             <p>Cada doação faz a diferença. Comece agora!</p>
             <a href="\cadastro" class="btn-secondary">Cadastrar Minha Doação</a>
         </section>
-
+        <footer>ShareSpot - Mostra Tech UNINASSAU 2025</footer>
     </body>
 </html>
