--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -9,6 +9,7 @@
     font-family: 'Inter Tight', sans-serif;
     list-style-type: none;
     scroll-behavior: smooth;
+
 }
 
 a{
@@ -473,7 +474,15 @@ nav{
     margin: 15px 0 20px 0;
 }
 
-.popup-btn button, #btn-fechar{
+#confirmar {
+    text-decoration: none;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: white;
+}
+
+.popup-btn button, #btn-confirmar, #btn-fechar{
+    
     padding: 10px 24px;
     border-radius: 25px;
     font-size: 0.9rem;
@@ -486,7 +495,7 @@ nav{
     white-space: nowrap;
 }
 
-.popup-btn button:hover, #btn-fechar:hover {
+.popup-btn button:hover, #btn-confirmar:hover,#btn-fechar:hover {
     background-color: #6aa3dd;
     color: white;
     transform: translateY(-5px);
@@ -507,6 +516,7 @@ nav{
     }
 
     .item {
+
         min-height: auto;
     }
 
@@ -809,6 +819,7 @@ nav{
     max-height: 0;
     transition: max-height 0.4s ease;
     background: rgba(232, 232, 232, 0.6);
+    -webkit-backdrop-filter: blur(4px);
     backdrop-filter: blur(4px);
 }
 
@@ -904,4 +915,14 @@ nav{
     .sobre-header h1 {
         font-size: 2rem;
     }
+}
+
+/*Footer*/
+
+footer {
+    text-align:center;
+    padding: 15px 0;
+    color: #4aa7e198;
+    font-size: 0.9rem;
+    margin-top: 10px;
 }
