--- a/views/styles/styles.css
+++ b/views/styles/styles.css
@@ -548,8 +548,11 @@ nav{
 
 .body-cadastro, .body-sobre {
     background: linear-gradient(135deg, #83ca86 0%, #6d94dc 100%);
-    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
+    height: 100vh;
 }
 
 .container-form-cadastro {
@@ -560,7 +563,7 @@ nav{
     display: flex;
     width: 450px;
     height: 550px;
-    margin-top: 10px;
+    margin-top: 45px;
     border: 4px solid rgba(255, 255, 255, 0.3);
     border-radius: 30px;
     overflow: hidden;
@@ -660,6 +663,14 @@ nav{
 }
 
 /* Estilos apenas para o formulário de doação (não afetam o formulário de cadastro) */
+
+.body-cadastro-doacao {
+    background: linear-gradient(135deg, #83ca86 0%, #6d94dc 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
 
 .container-form-cad {
     display: flex;
