--- a/views/routes/cadastrar_doacao.html
+++ b/views/routes/cadastrar_doacao.html
@@ -9,7 +9,7 @@
         <link href='https://cdn.boxicons.com/3.0.6/fonts/basic/boxicons.min.css' rel='stylesheet'>
         <script src="../scripts/barra-nav-script.js"></script>
     </head>
-    <body class="body-cadastro">
+    <body class="body-cadastro-doacao">
         <div id="link-navbar"></div> <!-- Div onde a barra de navegação será carregada -->
         <div class="container-form-cad">
 
