--- a/views/extras/barra-navegacao.html
+++ b/views/extras/barra-navegacao.html
@@ -5,7 +5,7 @@
     <i class='bx  bx-menu-search' id="icone-menu"></i> <!-- Ícone de menu -->
     <ul class="paginas-nav">
         <li><a href="/">Início</a></li>
-        <li><a href="/doacoes">Doações</a></li>
+        <li><a href="/doacoes#ong">Doações</a></li>
         <li><a href="/sobre">Sobre</a></li>
         <li><a href="/cadastro">Cadastre-se</a></li>
     </ul>
